Add shapeless indicator

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/de_de.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/de_de.json
@@ -9,10 +9,27 @@
   "text.rei.search.field.suggestion": "Suche...",
   "text.rei.feedback": "Möchtest du dem REI Entwickler dein Feedback geben? %s um dein Feedback einzureichen!",
   "text.rei.feedback.link": "Klicke hier um das Google-Form zu besuchen",
+  "text.rei.support.me": "Unterstütze mich, um REI weiter zu verbessern!",
+  "text.rei.support.me.desc": "Als Patreon Unterstützer von REI kannst du die neueste Version von REI für Minecraft Snapshots verwenden.\nAlternativ kannst du mich auch finanziell unterstützen, indem du einen BisectHosting Server mietst.\n\n%s\n%s",
+  "text.rei.support.me.patreon": "Spenden auf Patreon",
+  "text.rei.support.me.bisect": "Code SHEDANIEL auf BisectHosting verwenden",
   "text.rei.not.fully.initialized": "REI noch nicht vollständig initialisiert!",
   "text.rei.not.fully.initialized.tooltip": "Fehlende Stufen: %s\nFalls dies nicht weggeht,\nversuche mit den Logs nach Unterstützung zu suchen!",
   "text.rei.inventory.highlighting.enabled": "Inventarhervorhebung an",
   "text.rei.inventory.highlighting.enabled.tooltip": "Dies macht Slots, die nicht mit dem\nSuchfilter übereinstimmen grau.\nDoppelklicke die Suchleiste, um diesen Modus an- und auszuschalten.",
+  "text.rei.caching.search": "REI Caching Suchergebnisse...",
+  "text.rei.caching.search.step": "Schritt %d/%d (%s%%):",
+  "text.rei.config.menu.dark_theme": "Dunkles Design",
+  "text.rei.config.menu.craftable_filter": "Filter für Herstellbare Gegenstände",
+  "text.rei.config.menu.display": "Anzeigeeinstellungen",
+  "text.rei.config.menu.display.remove_recipe_book": "Rezeptbuch entfernen",
+  "text.rei.config.menu.display.left_side_mob_effects": "Linke Seite Mob-Effekte",
+  "text.rei.config.menu.display.left_side_panel": "Linke Seitenleiste",
+  "text.rei.config.menu.display.scrolling_side_panel": "Durchscrollbarer Seitenbereich",
+  "text.rei.config.menu.display.caching_entry_rendering": "Schnelleres Eintrags-Rendering",
+  "text.rei.config.menu.display.side_search_field": "Suchfeld",
+  "text.rei.config.menu.display.syntax_highlighting": "Syntax-Hervorhebung",
+  "text.rei.config.menu.config": "Weitere Optionen...",
   "category.rei.crafting": "Herstellen",
   "category.rei.smelting": "Schmelzen",
   "category.rei.smelting.fuel": "Brennstoff",
@@ -39,6 +56,10 @@
   "category.rei.beacon_payment": "Leuchtfeuerkosten",
   "category.rei.tilling": "Aufteilung",
   "category.rei.pathing": "Pfad",
+  "category.rei.waxing": "Wachsen",
+  "category.rei.wax_scraping": "Wachs abscharben",
+  "category.rei.oxidizing": "Oxidation",
+  "category.rei.oxidation_scraping": "Oxidationsabakratzung",
   "category.rei.information": "Information",
   "text.rei.composting.chance": "§e%d%% Chance",
   "text.rei.composting.page": "Seite %d",
@@ -47,6 +68,7 @@
   "text.rei.cheat_items": "[{item_name}] x{item_count} {player_name} gegeben.",
   "text.rei.failed_cheat_items": "§cItems geben fehlgeschlagen.",
   "text.rei.too_long_nbt": "§cGegenstand NBT ist zu lang, um im Multiplayer angewendet zu werden.",
+  "text.rei.tag_match": "Akzeptierter Tag: #%s",
   "text.rei.performance": "Leistungsanalyse",
   "ordering.rei.ascending": "Aufsteigend",
   "ordering.rei.descending": "Absteigend",
@@ -54,12 +76,14 @@
   "ordering.rei.name": "Name",
   "ordering.rei.item_groups": "Itemgruppen",
   "text.auto_craft.move_items": "Items bewegen",
+  "text.auto_craft.move_items.tooltip": "Strg-Klick zum Verschieben von Elementen",
   "text.auto_craft.move_items.yog": "Generiert NullPointerException!!",
   "error.rei.transfer.too_small": "Gegenstände können nicht in ein %dx%d-Raster verschoben werden.",
   "error.rei.not.on.server": "REI ist nicht auf dem Server installiert.",
   "error.rei.not.enough.materials": "Nicht genügend Materialien.",
   "error.rei.internal.error": "Interner Fehler: %s",
   "error.rei.recipe.not.unlocked": "Rezept nicht im Rezeptbuch freigeschaltet.",
+  "error.rei.not.supported.move.items": "Verschieben von Elementen wird mit diesem Rezept und diesem Container nicht unterstützt.",
   "error.rei.no.handlers.applicable": "Keine Handler anwendbar.",
   "error.rei.multi.errors": "Mehrere Fehler:",
   "rei.rei.no.slot.in.inv": "Kann keinen Platz für Gegenstand im Inventar finden",
@@ -77,7 +101,14 @@
   "text.rei.gamemode_button.tooltip.entry": "zu %s wechseln",
   "text.rei.weather_button.tooltip.dropdown": "Wetter ändern: Auswahl",
   "text.rei.weather_button.tooltip.entry": "zu %s wechseln",
+  "text.rei.time_button.tooltip.dropdown": "Wetter ändern: Auswahl",
+  "text.rei.time_button.tooltip.entry": "zu %s wechseln",
+  "text.rei.time_button.name.morn": "Morgen",
+  "text.rei.time_button.name.noon": "Mittag",
+  "text.rei.time_button.name.evening": "Abend",
+  "text.rei.time_button.name.night": "Nacht",
   "text.rei.reload_config": "Plugins neu laden",
+  "text.rei.reload_search": "Suche neu laden",
   "text.rei.config.is.reloading": "Plugins werden neu geladen!",
   "text.rei.enabled": "Ja",
   "text.rei.disabled": "Nein",
@@ -112,8 +143,15 @@
   "text.rei.tiny_potato": "Kleine Kartöffelchen",
   "text.rei.add_favorite_widget": "Hinzufügen...",
   "text.rei.dispose_here": "Hier verwerfen",
+  "text.rei.crash.title": "REI ist abgestürzt!",
+  "text.rei.crash.description": "§cRoughly Enough Items hat gerade einen Absturz während \"%s\" erlebt.\n\n§fDetails des Absturzes werden unten angezeigt. Bitte identifiziere die Modifikation, die den Absturz verursacht hat, und melde sie an den Mod-Autor, neben dem unten angegebenen Absturzprotokoll.\n\nWenn Sie glauben, dass dieser Absturz durch einen Fehler in Roughly Enough Items verursacht wird, melden Sie ihn bitte an unseren Issue-Tracker.\n\n§6Vielen Dank für deine Hilfe!\n",
+  "text.rei.crash.crash_report": "Absturzbericht öffnen",
+  "text.rei.changelog.title": "REI Änderungsliste",
+  "text.rei.changelog.error.missingChangelogFile": "Fehlende Änderungsprotokolldatei!",
+  "text.rei.changelog.error.failedToReadChangelogFile": "Fehler beim Lesen der Änderungsprotokolldatei!",
   "favorite.section.gamemode": "Spielmodus",
   "favorite.section.weather": "Wetter",
+  "favorite.section.time": "Zeit",
   "tooltip.rei.fluid_amount": "§7%d Einheit",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
   "tooltip.rei.drag_to_add_favorites": "§7Ziehe dies zu deinen Favoriten!",
@@ -130,6 +168,7 @@
   "config.roughlyenoughitems.functionality": "Funktionalität",
   "config.roughlyenoughitems.advanced": "Erweitert",
   "config.roughlyenoughitems.cheating": "Schummeln:",
+  "config.roughlyenoughitems.cheating.when_creative": "Im Kreativmodus",
   "config.roughlyenoughitems.favoritesEnabled": "Favoriten aktiviert:",
   "config.roughlyenoughitems.keyBindings": "Tastaturbelegungen",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "Zeige Rezept:",
@@ -169,6 +208,10 @@
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "Obere",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "Untere",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Vereine alle Displays mit demselben Inhalt",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "Favoriten Widget-Schaltfläche hinzufügen:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Immer unsichtbar",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Automatisch ausblenden",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Immer sichtbar",
   "config.roughlyenoughitems.filteredEntries.selectAll": "Alles Auswählen",
   "config.roughlyenoughitems.filteredEntries.selectNone": "Alle abwählen",
   "config.roughlyenoughitems.filteredEntries.hide": "Auswahl verstecken",
@@ -210,6 +253,9 @@
   "config.roughlyenoughitems.disableRecipeBook": "Vanilla Rezeptbuch:",
   "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNein",
   "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aJa",
+  "config.roughlyenoughitems.leftSideMobEffects": "Position der Mob-Effekte:",
+  "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "Links",
+  "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Rechts (Vanilla)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Korrigier den Vanilla Tab Container (wenn das Rezeptbuch deaktiviert ist):",
   "config.roughlyenoughitems.lighterButtonHover": "Helles Button-Hovern:",
   "config.roughlyenoughitems.layout.enableCraftableOnlyButton": "Filter für Herstellbare Gegenstände:",
@@ -225,6 +271,8 @@
   "config.roughlyenoughitems.layout.entryPanelOrdering": "Reihenfolge der Itemlisten:",
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
   "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Schnelleres Eintrags-Rendering:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Schnelleres Eintrags-Rendering:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "Diese Option verbessert die Leistung bei der Darstellung von Einträgen bis zu 5x, mit durchschnittlich 2. x Leistungssteigerung. Dies wird jedoch die Verzauberungsbrille und animierte Texturen zerstören/verbuggen.",
   "config.roughlyenoughitems.itemCheatingMode": "Anzahl der Gegenstände beim Cheaten:",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normal",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "Umgekehrt",
@@ -248,6 +296,8 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Normal unterstrichen",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Farbig",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Farbig unterstrichen",
+  "config.roughlyenoughitems.isFocusModeZoomed": "Autofokus-Modus",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Gezoomt",
   "config.roughlyenoughitems.filteringScreen": "Benutzerdefinierte Filter",
   "config.roughlyenoughitems.filteringRulesScreen": "Benutzerdefinierte Filterregeln",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Filterregel erstellen",
