--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -70,13 +70,14 @@
   "text.rei.too_long_nbt": "§cItem NBT is too long to be applied in multiplayer.",
   "text.rei.tag_match": "Accepts Tag: #%s",
   "text.rei.performance": "Performance Analysis",
+  "text.rei.shapeless": "Shapeless",
   "ordering.rei.ascending": "Ascending",
   "ordering.rei.descending": "Descending",
   "ordering.rei.registry": "Registry",
   "ordering.rei.name": "Name",
   "ordering.rei.item_groups": "Item Groups",
   "text.auto_craft.move_items": "Move Items",
-  "text.auto_craft.move_items.tooltip": "Ctrl-Click to Move Items",
+  "text.auto_craft.move_items.tooltip": "Ctrl-Click to Quick Craft",
   "text.auto_craft.move_items.yog": "Generate NullPointerException!!",
   "error.rei.transfer.too_small": "Unable to move items to a %dx%d grid.",
   "error.rei.not.on.server": "REI is not on the server.",
