--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
@@ -7,13 +7,17 @@
   "text.rei.cheating_limited_creative_enabled": "§aAtivar trapaças (modo Criativo)",
   "text.rei.no_permission_cheat": "Você precisa ser um operador para obter itens",
   "text.rei.search.field.suggestion": "Buscar...",
-  "text.rei.feedback": "Deseja enviar feedback ao desenvolvedor do REI? %s para enviá-lo!",
+  "text.rei.feedback": "Deseja enviar um feedback ao desenvolvedor do REI? %s para enviá-lo!",
   "text.rei.feedback.link": "Acesse o formulário de feedback",
+  "text.rei.support.me": "Apoie o REI para torná-lo ainda melhor!",
+  "text.rei.support.me.desc": "Como apoiador do REI no Patreon, você pode baixar a versão mais recente do REI para snapshots.\nVocê também pode me apoiar ao alugar um servidor na BisectHosting.",
+  "text.rei.support.me.patreon": "Apoie o REI no Patreon",
+  "text.rei.support.me.bisect": "Use o código SHEDANIEL na BisectHosting",
   "text.rei.not.fully.initialized": "O REI ainda não está completamente inicializado!",
   "text.rei.not.fully.initialized.tooltip": "Etapas restantes: %s\nSe isso continuar,\nverifique os registros!\n",
   "text.rei.inventory.highlighting.enabled": "Destaque de inventário ativado",
   "text.rei.inventory.highlighting.enabled.tooltip": "Os espaços não encontrados na busca\nficarão da cor cinza.\nClique duas vezes na barra de busca para ativar o modo.",
-  "text.rei.caching.search": "Memorizando busca...",
+  "text.rei.caching.search": "Memorizando busca do REI...",
   "text.rei.caching.search.step": "Passo %d/%d (%s%%):",
   "text.rei.config.menu.dark_theme": "Tema escuro",
   "text.rei.config.menu.craftable_filter": "Fabricáveis",
@@ -59,8 +63,8 @@
   "category.rei.information": "Informações",
   "text.rei.composting.chance": "§e%d%% de chances",
   "text.rei.composting.page": "Pág. %d",
-  "text.rei.config": "Definições",
-  "text.rei.config_tooltip": "Abrir menu de definições\n§7Shift + clique para alternar o modo trapaça",
+  "text.rei.config": "Ajustes",
+  "text.rei.config_tooltip": "Abrir menu de ajustes\n§7Shift + clique para alternar o modo trapaça",
   "text.rei.cheat_items": "{player_name} recebeu {item_count} unidade(s) de [{item_name}§f].",
   "text.rei.failed_cheat_items": "§cFalha ao obter itens.",
   "text.rei.too_long_nbt": "§cO NBT do item é longo demais para ser aplicado ao modo multijogador.",
@@ -75,10 +79,10 @@
   "text.auto_craft.move_items.tooltip": "Ctrl + clique para mover itens",
   "text.auto_craft.move_items.yog": "Gerar NullPointerException!",
   "error.rei.transfer.too_small": "Não é possível mover os itens para uma grade %dx%d.",
-  "error.rei.not.on.server": "O REI não está disponível no servidor.",
+  "error.rei.not.on.server": "O REI não está no servidor.",
   "error.rei.not.enough.materials": "Matéria-prima insuficiente.",
   "error.rei.internal.error": "Erro interno: %s",
-  "error.rei.recipe.not.unlocked": "Receita inacessível no livro de receitas.",
+  "error.rei.recipe.not.unlocked": "Receita inacessível no livro.",
   "error.rei.not.supported.move.items": "Não é possível mover itens com essa receita e contêiner.",
   "error.rei.no.handlers.applicable": "Processo indisponível.",
   "error.rei.multi.errors": "Vários erros:",
@@ -97,13 +101,14 @@
   "text.rei.gamemode_button.tooltip.entry": "Mudar para %s",
   "text.rei.weather_button.tooltip.dropdown": "Alterar tempo: Lista",
   "text.rei.weather_button.tooltip.entry": "Mudar para %s",
+  "text.rei.time_button.tooltip.entry": "Alterar para %s",
   "text.rei.time_button.name.morn": "Manhã",
   "text.rei.time_button.name.noon": "Meio-dia",
   "text.rei.time_button.name.evening": "Fim de tarde",
   "text.rei.time_button.name.night": "Noite",
-  "text.rei.reload_config": "Recarregar plug-ins",
+  "text.rei.reload_config": "Recarregar plugins",
   "text.rei.reload_search": "Recarregar busca",
-  "text.rei.config.is.reloading": "Recarregando plug-ins!",
+  "text.rei.config.is.reloading": "Recarregando plugins!",
   "text.rei.enabled": "Sim",
   "text.rei.disabled": "Não",
   "text.rei.short_gamemode.survival": "S",
@@ -126,11 +131,11 @@
   "text.rei.release_export": "Solte %s para exportar",
   "text.rei.recipe_id": "\n%sID: %s",
   "text.rei.recipe_screen_type.selection": "Selecionar estilo da tela de receita",
-  "text.rei.recipe_screen_type.selection.sub": "Você sempre pode editar essa opção no menu de definições.",
+  "text.rei.recipe_screen_type.selection.sub": "Você sempre pode editar essa opção no menu de ajustes.",
   "text.rei.jei_compat": "Camada de compatibilidade do JEI",
   "text.rei.jei_compat.false": "Camada de compatibilidade do JEI: Não",
   "text.rei.jei_compat.true": "Camada de compatibilidade do JEI: Sim",
-  "text.rei.jei_compat.sub": "Deseja ativar a camada de compatibilidade do JEI %s§7?\n§7Você pode carregar plug-ins do JEI pelas seguintes fontes:\n%s\n\n§7Lembre-se de que a compatibilidade do REI com o JEI não é perfeita.\n§cUSE POR SUA CONTA E RISCO!",
+  "text.rei.jei_compat.sub": "Deseja ativar a camada de compatibilidade do JEI %s§7?\n§7Você pode carregar plugins do JEI pelas seguintes fontes:\n%s\n\n§7Lembre-se de que a compatibilidade do REI com o JEI não é perfeita.\n§cUSE POR SUA CONTA E RISCO!",
   "text.rei.jei_compat.sub.stability": "§c§l(ALFA)",
   "text.rei.view_recipes_for": "Ver receitas para %s",
   "text.rei.subsets": "Subconjuntos",
@@ -138,10 +143,11 @@
   "text.rei.add_favorite_widget": "Adicionar...",
   "text.rei.dispose_here": "Deixe aqui",
   "text.rei.crash.title": "O REI parou de funcionar!",
+  "text.rei.crash.description": "§cO Roughly Enough Items parou de funcionar durante o evento \"%s\".\n\n§fVeja os detalhes abaixo. Identifique o mod que causou a parada e informe ao autor com o relatório de erro abaixo.\n\nSe você acha que a parada foi causada por um erro no Roughly Enough Items, informe-o no issue tracker.\n\n§6Obrigado!",
   "text.rei.crash.crash_report": "Abrir relatório de erro",
-  "text.rei.changelog.title": "Registro de alterações",
+  "text.rei.changelog.title": "Log de alterações do REI",
   "text.rei.changelog.error.missingChangelogFile": "Registro ausente!",
-  "text.rei.changelog.error.failedToReadChangelogFile": "Falha ao ler registro!",
+  "text.rei.changelog.error.failedToReadChangelogFile": "Falha ao ler o log!",
   "favorite.section.gamemode": "Modo de jogo",
   "favorite.section.weather": "Tempo",
   "tooltip.rei.fluid_amount": "§7%d unidade(s)",
@@ -153,8 +159,8 @@
   "msg.rei.exported_recipe.desc": "Verifique a pasta \"rei_exports\".",
   "subsets.rei.roughlyenoughitems.all_entries": "Todas",
   "subsets.rei.roughlyenoughitems.item_groups": "Guias do Criativo",
-  "_comment": "Descrições de definições",
-  "config.roughlyenoughitems.title": "Definições do Roughly Enough Items",
+  "_comment": "Descrição de ajustes",
+  "config.roughlyenoughitems.title": "Ajustes do Roughly Enough Items",
   "config.roughlyenoughitems.basics": "Básico",
   "config.roughlyenoughitems.appearance": "Estilo",
   "config.roughlyenoughitems.functionality": "Funções",
@@ -176,8 +182,8 @@
   "config.roughlyenoughitems.cheatingStyle": "Estilo de trapaça:",
   "config.roughlyenoughitems.cheatingStyle.grab": "Pegar",
   "config.roughlyenoughitems.cheatingStyle.give": "Dar",
-  "config.roughlyenoughitems.motion": "Definições de animações",
-  "config.roughlyenoughitems.motion.configScreenAnimation": "Animação da tela de def.:",
+  "config.roughlyenoughitems.motion": "Ajustes de animação",
+  "config.roughlyenoughitems.motion.configScreenAnimation": "Animação dos ajustes:",
   "config.roughlyenoughitems.motion.creditsScreenAnimation": "Animação da tela de créditos:",
   "config.roughlyenoughitems.motion.favoritesAnimation": "Favoritos animados:",
   "config.roughlyenoughitems.recipeScreenType": "Estilo da tela de receita:",
@@ -196,10 +202,11 @@
   "config.roughlyenoughitems.isSubsetsEnabled": "Ativar subconjuntos:",
   "config.roughlyenoughitems.allowInventoryHighlighting": "Destaque de inventário ativado:",
   "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "Brilho do encantamento:",
-  "config.roughlyenoughitems.layout.configButtonLocation": "Posição dos botões de definições:",
+  "config.roughlyenoughitems.layout.configButtonLocation": "Posição dos botões de ajustes:",
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "Superior",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "Inferior",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Unir visores de conteúdo idêntico:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "Botão de widget dos favoritos:",
   "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Sempre invisível",
   "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Ocultar auto.",
   "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Sempre visível",
@@ -219,7 +226,7 @@
   "config.roughlyenoughitems.recipeBorder.lighter": "Claro",
   "config.roughlyenoughitems.recipeBorder.default": "Padrão",
   "config.roughlyenoughitems.recipeBorder.none": "Não",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "Máximo de receitas por página:",
+  "config.roughlyenoughitems.layout.maxRecipesPerPage": "Limite de receitas por página:",
   "config.roughlyenoughitems.layout.maxRecipesPageHeight": "Altura máxima da página de receitas:",
   "config.roughlyenoughitems.accessibility.displayPanelLocation": "Posição do painel de entradas:",
   "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Esquerdo",
@@ -232,7 +239,7 @@
   "config.roughlyenoughitems.search_mode.prefix": "Ao usar prefixo",
   "config.roughlyenoughitems.search_mode.never": "Sempre inativo",
   "config.roughlyenoughitems.layout.debugRenderTimeRequired": "Depuração do painel de entradas:",
-  "config.roughlyenoughitems.search.debugSearchTimeRequired": "Modo de busca por depuração:",
+  "config.roughlyenoughitems.search.debugSearchTimeRequired": "Busca por depuração:",
   "config.roughlyenoughitems.accessibility.resizeDynamically": "Escala dinâmica:",
   "config.roughlyenoughitems.layout.searchFieldLocation": "Posição do campo de busca:",
   "config.roughlyenoughitems.layout.searchFieldLocation.bottom_side": "Inferior esq./Direita",
@@ -249,10 +256,10 @@
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Direita (padrão)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Corrigir contêiner de guias padrão (livro de receitas desativado):",
   "config.roughlyenoughitems.lighterButtonHover": "Cursor mínimo do botão:",
-  "config.roughlyenoughitems.layout.enableCraftableOnlyButton": "Filtro (fabricáveis):",
+  "config.roughlyenoughitems.layout.enableCraftableOnlyButton": "Filtro de fabricáveis:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Botões utilitários:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Comando do modo de jogo:",
-  "config.roughlyenoughitems.commands.giveCommand": "Comando give:",
+  "config.roughlyenoughitems.commands.giveCommand": "Comando \"give\":",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Carregar plug-in padrão:",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cNão (perigoso)",
   "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "Thread de recarga:",
@@ -263,14 +270,15 @@
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
   "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Renderização rápida de entradas:",
   "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Memorizando entrada:",
-  "config.roughlyenoughitems.itemCheatingMode": "Quantidade de itens por trapaça:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "Essa opção aumentará o desempenho em até cinco vezes ao renderizar as entradas, com uma média de duas vezes e meia de ganho. As texturas animadas e brilhos cintilantes serão desativados.",
+  "config.roughlyenoughitems.itemCheatingMode": "Número de itens por trapaça:",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "Comum",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "Invertido",
   "config.roughlyenoughitems.search.searchFavorites": "Filtro de busca nos favoritos:",
   "config.roughlyenoughitems.tooltips.appendModNames": "Incluir nomes de mods:",
   "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Incluir dicas aos favoritos:",
   "config.roughlyenoughitems.accessibility.snapToRows": "Linhas de troca de entradas:",
-  "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "Copiar toast:",
+  "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "Copiar toast de identificação:",
   "config.roughlyenoughitems.scrollingEntryListWidget": "Formato da lista de entradas:",
   "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "Rolagem",
   "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "Páginas",
@@ -289,6 +297,7 @@
   "config.roughlyenoughitems.isFocusModeZoomed": "Modo de foco da entrada:",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Ampliado",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Realçado",
+  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Exibir filtros:",
   "config.roughlyenoughitems.filteringScreen": "Filtro personalizado",
   "config.roughlyenoughitems.filteringRulesScreen": "Regras de filtros personalizados",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Criar regra para filtro",
@@ -296,7 +305,7 @@
   "rule.roughlyenoughitems.filtering.manual": "Filtro manual",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Selecionar manualmente o que ocultar e mostrar.",
   "rule.roughlyenoughitems.filtering.search": "Filtro de busca",
-  "rule.roughlyenoughitems.filtering.search.subtitle": "Utilize os filtros para delimitar a busca.",
+  "rule.roughlyenoughitems.filtering.search.subtitle": "Use os filtros para delimitar a busca.",
   "rule.roughlyenoughitems.filtering.search.filter": "Filtro de busca:",
   "rule.roughlyenoughitems.filtering.search.show": "Mostrar/Ocultar:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Mostrar",
