--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
@@ -70,13 +70,14 @@
   "text.rei.too_long_nbt": "§c物品 NBT 太长，不能应用于多人游戏.",
   "text.rei.tag_match": "接受标签: #%s",
   "text.rei.performance": "性能分析",
+  "text.rei.shapeless": "无序合成",
   "ordering.rei.ascending": "顺序",
   "ordering.rei.descending": "倒序",
   "ordering.rei.registry": "物品ID循序",
   "ordering.rei.name": "名称循序",
   "ordering.rei.item_groups": "物品分类的循序",
   "text.auto_craft.move_items": "移动物品",
-  "text.auto_craft.move_items.tooltip": "Ctrl+单击 以移动物品",
+  "text.auto_craft.move_items.tooltip": "Ctrl+单击 以快速合成",
   "text.auto_craft.move_items.yog": "Generate NullPointerException!!",
   "error.rei.transfer.too_small": "无法将移动物品到 %dx%d 的方格上.",
   "error.rei.not.on.server": "服务器没有安装 REI",
@@ -221,6 +222,7 @@
   "config.roughlyenoughitems.search.asyncSearch": "异步搜索：",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "异步搜索划分大小：",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "简洁标签：",
+  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "简洁标签分页按钮：",
   "config.roughlyenoughitems.theme": "外观主题:",
   "config.roughlyenoughitems.theme.dark": "深色主题",
   "config.roughlyenoughitems.theme.light": "浅色主题",
