--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
@@ -70,13 +70,14 @@
   "text.rei.too_long_nbt": "§c物品 NBT 過長，不適用於多人遊戲。",
   "text.rei.tag_match": "接受標籤: #%s",
   "text.rei.performance": "效能分析",
+  "text.rei.shapeless": "無序合成",
   "ordering.rei.ascending": "從 A 到 Z",
   "ordering.rei.descending": "從 Z 到 A",
   "ordering.rei.registry": "註冊名",
   "ordering.rei.name": "名稱",
   "ordering.rei.item_groups": "物品分類",
   "text.auto_craft.move_items": "移動物品",
-  "text.auto_craft.move_items.tooltip": "按住《Ctrl》鍵再點擊此處以移動物品",
+  "text.auto_craft.move_items.tooltip": "按住《Ctrl》鍵再點擊此處以快速合成",
   "text.auto_craft.move_items.yog": "發生異常無效指標 ！！",
   "error.rei.transfer.too_small": "無法將物品移動至 %dx%d 的合成格！",
   "error.rei.not.on.server": "伺服器未安裝 REI ！",
@@ -221,6 +222,7 @@
   "config.roughlyenoughitems.search.asyncSearch": "非同步搜尋：",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "非同步搜尋分區大小：",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "簡潔分類標籤：",
+  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "簡潔分類分頁按鍵：",
   "config.roughlyenoughitems.theme": "外觀主題：",
   "config.roughlyenoughitems.theme.dark": "深色主題",
   "config.roughlyenoughitems.theme.light": "淺色主題",
